- SequencedCollection implementation